--- a/layouts/partials/blox/my-resume-biography-3.html
+++ b/layouts/partials/blox/my-resume-biography-3.html
@@ -99,10 +99,10 @@
     </div>
   </div>
 
-  <div class="flex-auto max-w-prose pt-0 md:mt-12">
+  <div class="flex-auto max-w-prose pt-0 md:mt-12 px-2">
     {{ with ($block.content.text | emojify | $page.RenderString) | default $person_page.Content }}
     <div class="pt-2 justify-content-center prose prose-slate dark:prose-invert">
-      <div class="bio-text pt-0" {{ with $block.design.biography.style }}{{ (printf "style=\" %s\"" .) | safe.HTMLAttr
+      <div class="bio-text" {{ with $block.design.biography.style }}{{ (printf "style=\" %s\"" .) | safe.HTMLAttr
         }}{{end}}>
         {{ . }}
       </div>
